# hiking-route-recommender-demo

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: synthetic_interactions.csv  synthetic_interactions_test.csv  synthetic_interactions_train.csv  synthetic_routes.csv  synthetic_users.csv
docs/: architecture.md  data_readiness_checklist.md  evaluation_report.md  p0_baseline.md
notebooks/: 01_pipeline_demo.ipynb
outputs/: evaluation_metrics.csv
scripts/: generate_synthetic_data.py  run_baseline_smoke.py  run_hybrid_smoke.py  run_offline_evaluation.py
src/hiking_recommender/: __init__.py  api.py  baseline.py  business_rules.py  candidates.py  collaborative.py  content_based.py  data_loader.py  evaluation.py  features.py  merger.py  schemas.py
tests/: test_api.py  test_baseline_smoke.py  test_business_rules.py  test_data_loader.py  test_evaluation.py  test_features.py  test_hybrid_retrieval.py
